--- a/config/jobs/kubernetes/sig-k8s-infra/trusted/sig-security-trusted.yaml
+++ b/config/jobs/kubernetes/sig-k8s-infra/trusted/sig-security-trusted.yaml
@@ -67,7 +67,6 @@ periodics:
         # container images scan
         echo "Fetch the list of k8s images"
         curl -Ls https://sbom.k8s.io/$(curl -Ls https://dl.k8s.io/release/latest.txt)/release | grep 'PackageName: registry.k8s.io/' | awk '{print $2}' > images
-        sed 's/registry.k8s.io/k8s.gcr.io/' images > redirect-images
         while read image; do
           echo "Running container image scan.."
           EXIT_CODE=0
@@ -84,7 +83,7 @@ periodics:
           else
             echo "Scan completed image $image"
           fi
-        done < redirect-images
+        done < images
   annotations:
     testgrid-create-test-group: "true"
     testgrid-alert-email: security-tooling-private@kubernetes.io
